# sapphire-config

./: .pylintrc  CHANGES.md  CHANGES.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml
examples/components/: demo.conf  demo.py
examples/config/: demo.conf  demo.py
src/sapphire_config/: __init__.py  component.py  metadata.py  parser.py
tests/: test_sapphireconfig.py
